...
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="awm-KQ-A5u">
                                <rect key="frame" x="50" y="159" width="293" height="34"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" textContentType="email"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="f3y-Lx-iJ4">
                                <rect key="frame" x="50" y="223" width="293" height="34"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zvs-lk-eKP">
                                <rect key="frame" x="50" y="287" width="293" height="28"/>
...
                            <constraint firstItem="0rQ-VC-9Tp" firstAttribute="trailing" secondItem="38f-jX-o1m" secondAttribute="trailing" id="4Hb-6M-VGe"/>
                            <constraint firstItem="38f-jX-o1m" firstAttribute="leading" secondItem="0rQ-VC-9Tp" secondAttribute="leading" id="B5a-tu-ma6"/>
                            <constraint firstItem="0rQ-VC-9Tp" firstAttribute="bottom" secondItem="38f-jX-o1m" secondAttribute="bottom" id="qJH-Ky-JlK"/>
                            <constraint firstItem="38f-jX-o1m" firstAttribute="top" secondItem="0rQ-VC-9Tp" secondAttribute="top" id="uG5-MI-gEK"/>
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="" image="circle.grid.3x3.fill" catalog="system" id="VR3-aO-Q6u"/>
                    <nil key="simulatedTopBarMetrics"/>
                    <connections>
                        <outlet property="collectionView" destination="38f-jX-o1m" id="2AX-IR-MAZ"/>
                        <segue destination="uLQ-h4-ZbR" kind="showDetail" identifier="DetailListingScreen" id="BGq-cm-6nY"/>
                    </connections>
                </viewController>
...
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <constraints>
                            <constraint firstItem="eIk-d1-xlZ" firstAttribute="centerX" secondItem="60y-jf-GYR" secondAttribute="centerX" id="gmU-JJ-2VW"/>
                            <constraint firstItem="eIk-d1-xlZ" firstAttribute="centerY" secondItem="60y-jf-GYR" secondAttribute="centerY" id="uWa-NG-dog"/>
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="" image="arrowshape.turn.up.backward.fill" catalog="system" id="nst-XL-2pp"/>
                    <nil key="simulatedTopBarMetrics"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="b46-S6-3FX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                <exit id="qmc-wX-mLT" userLabel="Exit" sceneMemberID="exit"/>
            </objects>
            <point key="canvasLocation" x="3354.9618320610684" y="1297.8873239436621"/>
...
