//
//  Constant.swift
//  DemoApp
//
//  Created by Kaustubh Deo on 25/06/23.
//

import Foundation

struct Constant {
    static let segueIdentifier = "goToNext"
    static let customTableViewCell = "CustomTableViewCell"
    static let customCollectionCell = "CustomCollectionCell"
    static let movieUrl = "https://api.themoviedb.org/3/movie/upcoming?api_key=c7f7d1dc5a6aa58fd2f3602748ad9c64&language=en-US&page=1"
    
    static let validEmail = "Please enter valid email"
    static let validPassword = "Please enter valid password"
    static let validCredentials = "Please enter valid email and password"
    static let wentWrong = "Something went wrong."
    
    
}
